--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,17 @@ body {
   height: 100%;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .page-container {
   display: flex;
   flex-direction: column;
@@ -61,6 +72,8 @@ body {
   padding: 0;
   width: 450px;
   flex-wrap: wrap;
+  list-style-type: none;
+  display: flex;
 }
 
 .navigation-user {
@@ -69,6 +82,8 @@ body {
 }
 
 .navigation-link {
+  display: block;
+  padding: 20px 16px;
   font-size: 20px;
   font-weight: 700;
   color: #000000;
@@ -79,6 +94,9 @@ body {
 }
 
 .navigation-user-link {
+  min-width: 44px;
+  min-height: 64px;
+  padding: 22px 12px;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
@@ -125,11 +143,13 @@ body {
   background-color: #354751;
   background-size: cover;
   background-repeat: no-repeat;
+  padding-top: 51px;
 }
 
 .welcome-images {
   display: block;
   margin: 0 auto;
+  padding-bottom: 82px;
 }
 
 .lead {
@@ -138,6 +158,8 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
+  margin: 0;
+  margin-bottom: 25px;
   text-align: center;
 }
 
@@ -148,19 +170,23 @@ body {
   color: #333333;
   text-align: center;
   background-color: #ffffff;
+  margin: 0;
 }
 
 .advantages-list {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 0
+  padding: 0;
+  list-style-type: none;
+  width: 100%;
 }
 
 .advantages-item-big-container {
   width: 400px;
   padding: 103px 85px;
   box-sizing: border-box;
+  min-height: 385px;
 }
 
 .advantages-title {
@@ -170,6 +196,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   margin: 0;
+  margin-bottom: 62px;
 }
 
 .advantages-description {
@@ -177,6 +204,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+  margin: 0;
 }
 
 .advantages-item.advantages-item-big {
@@ -192,6 +220,7 @@ body {
   width: 400px;
   padding: 103px 85px;
   box-sizing: border-box;
+  min-height: 385px;
 }
 
 .advantages-item.advantages-item-medium:nth-child(odd) {
@@ -207,6 +236,8 @@ body {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  list-style-type: none;
+  width: 100%;
 }
 
 .infrastructure-text {
@@ -226,6 +257,7 @@ body {
   text-align: center;
   color: #000000;
   margin: 0;
+  margin-bottom: 30px;
 }
 
 .infrastructure-item:nth-child(odd) {
@@ -237,6 +269,7 @@ body {
   width: 400px;
   padding: 80px 85px;
   box-sizing: border-box;
+  min-height: 385px;
 }
 
 .infrastructure-item:nth-child(even) {
@@ -250,7 +283,7 @@ body {
 .search {
   width: 592px;
   text-align: center;
-  margin: 0 auto;
+  margin: 96px auto;
 }
 
 .search-title {
@@ -260,6 +293,8 @@ body {
   color: #000000;
   text-transform: uppercase;
   text-align: center;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .search-text {
@@ -268,6 +303,7 @@ body {
   line-height: 26px;
   color: #333333;
   text-align: center;
+  margin-bottom: 54px;
 }
 
 .search-button {
@@ -280,6 +316,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
+  margin: 0 auto;
 }
 
 .block-subscribe {
@@ -288,6 +325,8 @@ body {
   color: #ffffff;
   background-color: #174255;
   background-repeat: no-repeat;
+  margin: 0;
+  padding: 96px 258px 104px 258px;
 }
 
 .newsletter {
@@ -302,6 +341,8 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   text-align: center;
+  margin-bottom: 20px;
+  margin: 0;
 }
 
 .newsletter-text {
@@ -310,10 +351,19 @@ body {
   line-height: 26px;
   text-align: center;
   color: #ffffff;
+  margin-bottom: 54px;
 }
 
 .subscribe-form-name {
   text-align: center;
+  margin: 0;
+}
+
+.email-input {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .newsletter-button {
@@ -330,16 +380,25 @@ body {
 .page-footer {
   display: flex;
   width: 1060px;
-  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 30px;
   text-decoration: none;
   padding: 0 70px;
   justify-content: space-between;
 }
 
 .footer-social-list {
-  width: 190px;
   margin: 0;
   padding: 0;
+  width: 190px;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-social-item {
+  width: 47px;
+  height: 40px;
 }
 
 .footer-phone {
@@ -366,6 +425,7 @@ body {
   background-repeat: no-repeat;
   padding: 70px;
   width: 1060px;
+  padding-top: 35px;
 }
 
 .inner-header-title {
@@ -374,6 +434,8 @@ body {
   line-height: 78px;
   color: #ffffff;
   text-align: left;
+  margin: 0;
+  margin-bottom: 8px;
 }
 
 .breadcrumbs {
@@ -383,6 +445,8 @@ body {
   align-items: center;
   width: 114px;
   flex-wrap: wrap;
+  margin-bottom: 40px;
+  list-style-type: none;
 }
 
 .breadcrumbs-link {
@@ -400,17 +464,23 @@ body {
 
 .infrastructure-group {
   width: 150px;
-  margin-right: 32px;
+  gap: 32px;
 }
 
 .type-housing-group {
   width: 150px;
-  margin-right: 32px;
+  gap: 32px;
 }
 
 .price-group {
   width: 288px;
-  margin-left: 0 auto;
+  gap: 32px;
+}
+
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 .fieldset-title {
@@ -462,6 +532,7 @@ body {
 .catalog-hotels {
   width: 1060px;
   margin: 0 auto;
+  padding: 50px 70px;
 }
 
 .catalog-hotels-sorting-container {
@@ -469,6 +540,7 @@ body {
   width: 100%;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 40px;
 }
 
 .catalog-hotels-title {
@@ -491,9 +563,20 @@ body {
 }
 
 .view-buttons {
+  display: flex;
+  align-items: center;
   width: 160px;
   margin: 0;
   padding: 0;
+  gap: 8px;
+  list-style-type: none;
+  flex-wrap: wrap;
+}
+
+.view-button-item {
+  display: block;
+  width: 48px;
+  height: 48px;
 }
 
 .catalog-hotels-list {
@@ -503,10 +586,12 @@ body {
   padding: 0;
   flex-wrap: wrap;
   gap: 20px;
+  list-style-type: none;
 }
 
 .catalog-hotels-card {
   width: 340px;
+  padding: 20px;
   box-sizing: border-box;
 }
 
@@ -519,6 +604,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #000000;
+  margin-bottom: 16px;
 }
 
 .catalog-hotels-type {
@@ -526,6 +612,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
+  margin-bottom: 16px;
 }
 
 .catalog-hotels-price {
@@ -533,6 +620,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
+  margin-bottom: 16px;
 }
 
 .catalog-hotels-detail {
@@ -584,6 +672,7 @@ body {
   margin: 0;
   padding: 0;
   gap: 8px;
+  list-style-type: none;
 }
 
 .pagination-link {
@@ -596,10 +685,12 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   display: flex;
-  width: 60px;
+  min-width: 60px;
   height: 60px;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+  padding: 0 5px;
 }
 
 .pagination-current {
