--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,21 +64,35 @@ body {
 
 .navigation {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   position: relative;
+  margin: 0 auto;
 }
 
 .navigation-logo {
-  width: 138px;
+  display: block;
+  width: 140px;
   height: 64px;
   margin-right: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.navigation-logo:hover {
+  opacity: 0.6;
+}
+
+.navigation-logo:focus-visible {
+  opacity: 0.6;
+}
+
+.navigation-logo:active {
+  opacity: 0.3;
 }
 
 .page-header-logo {
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .navigation-list {
@@ -88,6 +102,7 @@ body {
   flex-wrap: wrap;
   list-style-type: none;
   display: flex;
+  margin-left: 168px;
 }
 
 .navigation-link {
@@ -102,6 +117,18 @@ body {
   text-decoration: none;
   text-align: center;
   position: relative;
+}
+
+.navigation-link:hover {
+  color: #756157;
+}
+
+.navigation-link:focus-visible {
+  color: #756157;
+}
+
+.navigation-link:active {
+  color: rgba(229, 229, 229, 1);
 }
 
 .navigation-link-current::before {
@@ -119,7 +146,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 280px;
-  ;
   margin: 0;
   padding: 0;
   margin-left: auto;
@@ -151,11 +177,35 @@ body {
   background-size: 20px 20px;
 }
 
+.user-link-search:hover {
+  opacity: 0.5;
+}
+
+.user-link-search:focus-visible {
+  opacity: 0.5;
+}
+
+.user-link-search:active {
+  opacity: 0.3;
+}
+
 .user-link-favourite {
   background-image: url("../images/icon/favourite.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px 20px;
+}
+
+.user-link-favourite:hover {
+  opacity: 0.5;
+}
+
+.user-link-favourite:focus-visible {
+  opacity: 0.5;
+}
+
+.user-link-favourite:active {
+  opacity: 0.3;
 }
 
 .notification-badge {
@@ -169,8 +219,8 @@ body {
   display: flex;
   width: 20px;
   height: 20px;
-  border-radius: 10px;
-  top: 11px;
+  border-radius: 50%;
+  top: 1px;
   right: 4px;
   padding: 5px;
   position: absolute;
@@ -186,6 +236,7 @@ body {
   margin: 0;
   border-radius: 4px;
   cursor: pointer;
+  margin-left: 20px;
 }
 
 .header-button:hover {
@@ -204,7 +255,6 @@ body {
 .header-button:disabled {
   background-color: #e5e5e5;
 }
-
 
 .main-index {
   color: #000000;
@@ -287,10 +337,10 @@ body {
   background-color: rgba(255, 255, 255, 0.3);
   width: 60px;
   height: 2px;
-  right: 85px;
-  left: 85px;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -30px;
   position: absolute;
-  margin: 50px auto;
 }
 
 .advantages-item-medium .advantages-title::after {
@@ -354,7 +404,7 @@ body {
 .infrastructure-item {
   display: block;
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: center 81px;
   background-size: 75px 72px;
 }
 
@@ -392,24 +442,24 @@ body {
   margin-bottom: 30px;
 }
 
-.infrastructure-item:nth-child(odd) {
+.infrastructure-item {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
   background-color: rgba(131, 179, 211, 0.12);
   width: 400px;
-  padding: 80px 85px;
-  box-sizing: border-box;
   min-height: 385px;
+  padding: 183px 85px 81px;
+  box-sizing: border-box;
+}
+
+.infrastructure-item:nth-child(odd) {
+  background-color: rgba(131, 179, 211, 0.12);
 }
 
 .infrastructure-item:nth-child(even) {
   background-color: #ffffff;
-  text-align: center;
-  width: 400px;
-  padding: 80px 85px;
-  box-sizing: border-box;
 }
 
 .search {
@@ -581,19 +631,36 @@ body {
 }
 
 .footer-social-item {
+  margin: 0;
+}
+
+.footer-social-link {
+  display: flex;
   width: 47px;
   height: 40px;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-.footer-social-link:hover {
+.footer-social-icon {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #83b3d3;
+  position: absolute;
+}
+
+.footer-social-link:hover svg {
   color: #68a2ca;
 }
 
-.footer-social-link:focus-visible {
+.footer-social-link:focus-visible svg {
   color: #68a2ca;
 }
 
-.footer-social-link:active {
+.footer-social-link:active svg {
   color: rgba(104, 162, 202, 0.3);
 }
 
@@ -664,7 +731,6 @@ body {
   margin: 0;
   padding: 0;
   align-items: center;
-  width: 114px;
   flex-wrap: wrap;
   margin-bottom: 40px;
   list-style-type: none;
@@ -673,7 +739,7 @@ body {
 .breadcrumbs-item {
   display: flex;
   position: relative;
-  margin-right: 30px;
+  margin-right: 10px;
 }
 
 .breadcrumbs-link {
@@ -682,6 +748,12 @@ body {
   line-height: 21px;
   color: #ffffff;
   text-decoration-line: none;
+  margin-right: 30px;
+}
+
+.breadcrumbs-link-home {
+  width: 13px;
+  height: 15px;
 }
 
 .breadcrumbs-item::after {
@@ -692,6 +764,10 @@ body {
   height: 21px;
   display: block;
   background-position: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -5px;
 }
 
 .breadcrumbs-item:last-child.breadcrumbs-item::after {
@@ -723,6 +799,7 @@ body {
   margin-right: 70px;
   margin-left: auto;
   width: 150px;
+  border: none;
 }
 
 .price-group {
@@ -736,6 +813,76 @@ body {
   padding: 0;
   list-style-type: none;
 }
+
+.catalog-filter-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.control {
+  position: relative;
+  display: block;
+  padding-left: 36px;
+}
+
+.control-mark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+
+.control:hover .control-mark {
+  opacity: 0.6;
+}
+
+.control-input[type="checkbox"]:focus-visible + .control-mark {
+  outline: 3px solid#83b3d3;
+}
+
+.control-input[type="radio"]:focus-visible + .control-mark {
+  outline: 3px solid#83b3d3;
+}
+
+.control:active .control-mark {
+  opacity: 0.3;
+}
+
+.control:hover .control-label {
+  opacity: 0.6;
+}
+
+.control:active .control-label {
+  opacity: 0.3;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::before {
+  content: "";
+  position: absolute;
+  width: 13px;
+  height: 10px;
+  top: 6px;
+  left: 4px;
+  background-image: url("../images/tick.svg");
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 5px;
+  left: 5px;
+  border-radius: 50%;
+  background: #3f5e72;
+}
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
 
 .fieldset-title {
   font-weight: 700;
@@ -758,6 +905,91 @@ body {
   font-size: 18px;
   line-height: 24px;
   color: #000000;
+}
+
+.range-wrapper-inputs {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+  margin-bottom: 42px;
+}
+
+.range-input {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  width: 143px;
+  height: 48px;
+  padding: 12px 20px;
+  border-radius: 4px;
+  border: none;
+  box-sizing: border-box;
+  background-color: #f2f2f2;
+}
+
+.range-input:hover {
+  background-color: #e6e6e6;
+}
+
+.range-input:focus-visible {
+  background-color: #e6e6e6;
+}
+
+.range-input-min-interval {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.range-input-max-interval {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.range-toggle:hover {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+.range-toggle:focus-visible {
+  background: #ffffff;
+  outline: 3px solid #83b3d3;
+}
+
+.range-toggle:active {
+  background: #ffffff;
+  outline: 3px solid #83b3d3;
+}
+
+.toggle-min {
+  left: 0;
+  top: -8px;
+}
+
+.toggle-max {
+  right: 0;
+  top: -8px;
 }
 
 .catalog-filter-buttons {
@@ -855,13 +1087,34 @@ body {
 }
 
 .select-control {
+  font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   color: #333333;
   width: 292px;
-  padding: 14px 20px;
+  height: 49px;
+  padding: 12px 16px;
+  padding-right: 50px;
   border-radius: 4px;
+  background-image: url("../images/down-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  appearance: none;
+  border: 2px solid #e5e5e5;
+}
+
+.select-control:hover {
+  border-color: #68a2ca;
+}
+
+.select-control:focus-visible {
+  border-color: #68a2ca;
+}
+
+.select-control:disabled {
+  color: rgba(0, 0, 0, 0.3);
+  border-color: rgba(0, 0, 0, 0.3);
 }
 
 .view-buttons {
@@ -875,27 +1128,30 @@ body {
   flex-wrap: wrap;
 }
 
-.view-button-item {
-  display: block;
+.view-button {
+  display: flex;
   width: 48px;
   height: 48px;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
-  padding: 17px 16px;
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
 }
 
-.view-button-item:hover {
+.view-button-tile-current {
+  border: 2px solid#000000;
+}
+
+.view-button:hover {
   border-color: #000000;
 }
 
-.view-button-item:focus-visible {
+.view-button:focus-visible {
   outline: 2px solid #68a2ca;
 }
 
-.view-button-item:active {
+.view-button:active {
   border-color: #000000;
 }
 
@@ -1051,6 +1307,33 @@ body {
   background-color: #e5e5e5;
 }
 
+.catalog-hotels-card-stars {
+  height: 17px;
+  margin: 0;
+  background-image: url("../images/star.svg");
+  background-repeat: space no-repeat;
+}
+
+.catalog-hotels-card-stars-5 {
+  width: 90px;
+}
+
+.catalog-hotels-card-stars-4 {
+  width: 72px;
+}
+
+.catalog-hotels-card-stars-3 {
+  width: 54px;
+}
+
+.catalog-hotels-card-stars-2 {
+  width: 36px;
+}
+
+.catalog-hotels-card-stars-1 {
+  width: 18px;
+}
+
 .catalog-hotels-rating {
   font-family: inherit;
   font-weight: 400;
@@ -1062,9 +1345,10 @@ body {
   text-decoration: none;
   padding-left: 23px;
   padding-right: 22px;
-  padding-top: 9px;
+  padding-top: 8px;
   padding-bottom: 8px;
 }
+
 
 .pagination-list {
   display: flex;
@@ -1091,7 +1375,26 @@ body {
   align-items: center;
   box-sizing: border-box;
   padding: 0 5px;
+  ;
   border-radius: 4px;
+}
+
+.pagination-link-current {
+  color: #000000;
+  background-color: #f2f2f2;
+}
+
+.pagination-link:hover {
+  background-color: #68a2ca;
+}
+
+.pagination-link:focus-visible {
+  background-color: #68a2ca;
+}
+
+.pagination-link:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #82b3d3;
 }
 
 .pagination-text {
@@ -1105,17 +1408,6 @@ body {
   padding-right: 22px;
   padding-top: 17px;
   padding-bottom: 18px;
-}
-
-.pagination-current {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  color: #000000;
-  background-color: #f2f2f2;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
 }
 
 .newsletter-title-catalog {
