--- a/styles/styles.css
+++ b/styles/styles.css
@@ -739,7 +739,7 @@ body {
 .breadcrumbs-item {
   display: flex;
   position: relative;
-  margin-right: 10px;
+  margin-right: 28px;
 }
 
 .breadcrumbs-link {
@@ -748,7 +748,6 @@ body {
   line-height: 21px;
   color: #ffffff;
   text-decoration-line: none;
-  margin-right: 30px;
 }
 
 .breadcrumbs-link-home {
@@ -767,7 +766,7 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  right: -5px;
+  right: -18px;
 }
 
 .breadcrumbs-item:last-child.breadcrumbs-item::after {
@@ -796,16 +795,26 @@ body {
 }
 
 .catalog-filter-group {
-  margin-right: 70px;
-  margin-left: auto;
-  width: 150px;
   border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.infrastructure-group {
+  width: 150px;
+  margin-right: 70px;
+}
+
+.type-housing-group {
+  width: 150px;
+  margin-right: 140px;
 }
 
 .price-group {
   width: 288px;
-  margin: 0;
+  margin-right: 70px;
   padding: 0;
+  margin: 0;
 }
 
 .catalog-filter-list {
@@ -848,6 +857,14 @@ body {
 
 .control:active .control-mark {
   opacity: 0.3;
+}
+
+.control-input:disabled + .control-mark {
+  opacity: 0.3;
+}
+
+.control-input:disabled ~ .control-label {
+  opacity: 0.6;
 }
 
 .control:hover .control-label {
@@ -905,6 +922,17 @@ body {
   font-size: 18px;
   line-height: 24px;
   color: #000000;
+  position: relative;
+}
+
+.filter-range-label {
+  position: absolute;
+  top: 13px;
+  right: 20px;
+  opacity: 0.3;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .range-wrapper-inputs {
@@ -966,10 +994,6 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.range-toggle:hover {
-  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .range-toggle:focus-visible {
@@ -1312,26 +1336,20 @@ body {
   margin: 0;
   background-image: url("../images/star.svg");
   background-repeat: space no-repeat;
-}
-
-.catalog-hotels-card-stars-5 {
-  width: 90px;
+  background-position: center;
+  margin-top: 10px;
 }
 
 .catalog-hotels-card-stars-4 {
-  width: 72px;
+  width: 89px;
 }
 
 .catalog-hotels-card-stars-3 {
-  width: 54px;
+  width: 66px;
 }
 
 .catalog-hotels-card-stars-2 {
-  width: 36px;
-}
-
-.catalog-hotels-card-stars-1 {
-  width: 18px;
+  width: 42px;
 }
 
 .catalog-hotels-rating {
@@ -1347,6 +1365,8 @@ body {
   padding-right: 22px;
   padding-top: 8px;
   padding-bottom: 8px;
+  margin: 0;
+  border-radius: 4px;
 }
 
 
@@ -1384,7 +1404,7 @@ body {
   background-color: #f2f2f2;
 }
 
-.pagination-link:hover {
+.pagination-link:not(.pagination-link-current):hover {
   background-color: #68a2ca;
 }
 
@@ -1425,4 +1445,284 @@ body {
   line-height: 26px;
   color: #333333;
   text-align: center;
+}
+/* модальное окно */
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+.modal-search {
+  width: 717px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 64px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  padding: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  background-color: #f2f2f2;
+}
+
+.modal-close-button:hover {
+  background-color: #e6e6e6;
+}
+
+.modal-close-button:focus-visible {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3
+}
+
+.modal-close-button:active {
+  opacity: 0.3;
+  background-color: #e6e6e6;
+}
+
+.modal-title {
+  margin: 0;
+  margin-bottom: 64px;
+  font-weight: 700px;
+  font-size: 30px;
+  line-height: 36px;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.search-form {
+  margin: 0;
+  margin-bottom: 64px;
+}
+
+.search-form-label {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+}
+
+.search-form-input {
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  padding: 12px 20px;
+  border: none;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  margin-left: 24px;
+}
+
+.input-date {
+  padding-right: 50px;
+  width: 440px;
+  background-image: url("../images/calendar.svg");
+  background-repeat: no-repeat;
+  background-position: center right 22px;
+}
+
+.search-form-input:hover {
+  background-color: #e6e6e6;
+}
+
+.search-form-input:focus-visible {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3;
+}
+
+.modal-filed-message {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #333333;
+  margin-bottom: 23px;
+  margin-left: 157px;
+}
+
+.modal-filed-message-error {
+  color: #ff5757;
+}
+
+.modal-age-wrapper {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 40px;
+}
+
+.guests-wrapper {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.input-number-wrapper {
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  margin-left: 46px;
+}
+
+.number-minus {
+  width: 40px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  color :#756157;
+  opacity: 0.3;
+}
+
+.number-plus {
+  width: 40px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+  color :#756157;
+  opacity: 0.3;
+}
+
+.search-form-input[type="number"] {
+  width: 31px;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.search-form-input::-webkit-outer-spin-button,
+.search-form-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+
+.form-label-icon {
+  display: flex;
+  position: relative;
+  padding-right: 25px;
+}
+
+.tooltip {
+  position: absolute;
+  margin-top: 12px;
+  right: 0;
+}
+
+.tooltip-toggle {
+  display: block;
+  width: 26px;
+  height: 26px;
+  border: none;
+  margin: 0;
+  padding: 0;
+  background-color: #83b3d3;
+  border-radius: 50%;
+  background-image: url("../images/info.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.tooltip-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  background-color: #333333;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  position: absolute;
+  display: block;
+  width: 216px;
+  margin-top: 15px;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 10px;
+  padding: 18px;
+}
+
+.tooltip-toggle:hover {
+  background-color: #68a2ca;
+}
+
+.tooltip-toggle:focus-visible {
+  background-color: #68a2ca;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+
+.tooltip-text::before {
+  content: "";
+  width: 19px;
+  height: 9px;
+  position: absolute;
+  top: -9px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  background-image: url("../images/arrow-up.svg");
+}
+
+
+.search-form-button {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  background-color: #83b3d3;
+  border-radius: 10px;
+  width: 577px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.search-form-button:hover {
+  background-color: #68a2ca;
+}
+
+.search-form-button:focus-visible {
+  background-color: #68a2ca;
+}
+
+.search-form-button:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #68a2ca;
 }
