Добавляет проект для проверки наставником

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@ html {
 
 body {
   font-family: "PT Sans", sans-serif;
+  min-width: 1060px;
   font-size: 18px;
   line-height: 21px;
   color: #333333;
@@ -119,7 +120,7 @@ body {
   position: relative;
 }
 
-.navigation-link:hover {
+.navigation-link[href]:hover {
   color: #756157;
 }
 
@@ -127,7 +128,7 @@ body {
   color: #756157;
 }
 
-.navigation-link:active {
+.navigation-link[href]:active {
   color: rgba(229, 229, 229, 1);
 }
 
@@ -173,7 +174,7 @@ body {
 .user-link-search {
   background-image: url("../images/icon/search.svg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center right 5px;
   background-size: 20px 20px;
 }
 
@@ -192,7 +193,7 @@ body {
 .user-link-favourite {
   background-image: url("../images/icon/favourite.svg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center right 5px;
   background-size: 20px 20px;
 }
 
@@ -221,7 +222,7 @@ body {
   height: 20px;
   border-radius: 50%;
   top: 1px;
-  right: 4px;
+  right: -3px;
   padding: 5px;
   position: absolute;
   box-sizing: border-box;
@@ -236,7 +237,8 @@ body {
   margin: 0;
   border-radius: 4px;
   cursor: pointer;
-  margin-left: 20px;
+  margin-left: 30px;
+  text-decoration: none;
 }
 
 .header-button:hover {
@@ -312,6 +314,7 @@ body {
   padding: 0;
   list-style-type: none;
   width: 100%;
+  padding-top: 20px;
 }
 
 .advantages-item-big-container {
@@ -319,6 +322,7 @@ body {
   padding: 102px 85px;
   min-height: 385px;
   box-sizing: border-box;
+  padding-bottom: 5px;
 }
 
 .advantages-title {
@@ -330,6 +334,7 @@ body {
   margin: 0;
   margin-bottom: 62px;
   position: relative;
+  padding-top: 5px;
 }
 
 .advantages-title::after {
@@ -387,7 +392,7 @@ body {
 
 .infrastructure-lead-wrapper {
   width: 505px;
-  padding: 64px 0;
+  margin: 64px 0;
   margin-left: auto;
   margin-right: auto;
 }
@@ -399,6 +404,7 @@ body {
   padding: 0;
   list-style-type: none;
   width: 100%;
+  height: 385px;
 }
 
 .infrastructure-item {
@@ -572,10 +578,12 @@ body {
   font-size: 18px;
   line-height: 24px;
   width: 452px;
-  padding: 12px 20px;
-  border: 0;
+  height: 100%;
+  padding: 14px 20px;
+  border: none;
   border-radius: 4px 0 0 4px;
   background-color: #f2f2f2;
+  box-sizing: border-box;
 }
 
 .newsletter-button {
@@ -617,8 +625,10 @@ body {
   margin-top: 40px;
   margin-bottom: 30px;
   text-decoration: none;
-  padding: 0 70px;
+  padding: 5px 0;
   justify-content: space-between;
+  margin: 0 auto;
+  height: 120px;
 }
 
 .footer-social-list {
@@ -636,7 +646,7 @@ body {
 
 .footer-social-link {
   display: flex;
-  width: 47px;
+  width: 48px;
   height: 40px;
   justify-content: center;
   align-items: center;
@@ -644,7 +654,7 @@ body {
 }
 
 .footer-social-icon {
-  top: 0;
+  top: 15px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -672,7 +682,9 @@ body {
   text-align: center;
   color: #000000;
   text-decoration-line: none;
-  width: 331px;
+  width: 332px;
+  padding: 16px;
+  margin-right: 87px;
 }
 
 .footer-phone:hover {
@@ -690,6 +702,8 @@ body {
 .copyright {
   width: 115px;
   color: #000000;
+  position: relative;
+  display: block;
 }
 
 .copyright:hover {
@@ -702,6 +716,15 @@ body {
 
 .copyright:active {
   color: rgba(117, 97, 87, 0.3);
+}
+
+.footer-logo-academy {
+  position: absolute;
+  top: -40px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
 }
 
 /* Стилизация каталога*/
@@ -864,7 +887,7 @@ body {
 }
 
 .control-input:disabled ~ .control-label {
-  opacity: 0.6;
+  opacity: 0.3;
 }
 
 .control:hover .control-label {
@@ -899,7 +922,6 @@ body {
 .control-input[type="radio"] + .control-mark {
   border-radius: 50%;
 }
-
 
 .fieldset-title {
   font-weight: 700;
@@ -1126,6 +1148,7 @@ body {
   background-position: right 20px center;
   appearance: none;
   border: 2px solid #e5e5e5;
+  margin-left: 120px;
 }
 
 .select-control:hover {
@@ -1197,7 +1220,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
-  row-gap: 16px
+  row-gap: 16px;
 }
 
 .catalog-hotels-card-image {
@@ -1218,6 +1241,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: #000000;
+  margin: 0;
 }
 
 .catalog-hotels-type {
@@ -1226,6 +1250,7 @@ body {
   line-height: 21px;
   color: #333333;
   margin-bottom: 16px;
+  margin: 0;
 }
 
 .catalog-hotels-price {
@@ -1233,11 +1258,23 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
-  margin-bottom: 16px;
-  display: block;
+  text-align: right;
+  margin: 0;
+}
+
+.catalog-card-buttons {
+  display: flex;
+  justify-content: center;
+  width: 300px;
+  height: 36px;
+  margin: 0 auto;
+  gap: 20px;
 }
 
 .catalog-hotels-detail {
+  font-family: inherit;
+  display: flex;
+  width: 140px;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -1245,10 +1282,12 @@ body {
   background-color: #756157;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 8px 26px;
-  display: block;
+  padding: 8px 0;
   border-radius: 4px;
   cursor: pointer;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
 }
 
 .catalog-hotels-detail:hover {
@@ -1270,6 +1309,10 @@ body {
 }
 
 .catalog-hotels-like {
+  font-family: inherit;
+  width: 140px;
+  min-height: 36px;
+  display: flex;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -1278,9 +1321,13 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
-  padding: 8px 20px;
+  padding: 8px 0;
   border-radius: 4px;
   cursor: pointer;
+  border: none;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
 }
 
 .catalog-hotels-like:hover {
@@ -1301,6 +1348,10 @@ body {
 }
 
 .catalog-hotels-in-like {
+  font-family: inherit;
+  width: 140px;
+  min-height: 36px;
+  display: flex;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -1309,9 +1360,13 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
-  padding: 8px 18px;
+  padding: 8px 0;
   border-radius: 4px;
   cursor: pointer;
+  border: none;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
 }
 
 .catalog-hotels-in-like:hover {
@@ -1353,6 +1408,9 @@ body {
 }
 
 .catalog-hotels-rating {
+  display: flex;
+  justify-content: center;
+  width: 140px;
   font-family: inherit;
   font-weight: 400;
   font-size: 16px;
@@ -1361,11 +1419,9 @@ body {
   background-color: #f2f2f2;
   text-transform: uppercase;
   text-decoration: none;
-  padding-left: 23px;
-  padding-right: 22px;
   padding-top: 8px;
   padding-bottom: 8px;
-  margin: 0;
+  margin: 0 auto;
   border-radius: 4px;
 }
 
@@ -1395,7 +1451,6 @@ body {
   align-items: center;
   box-sizing: border-box;
   padding: 0 5px;
-  ;
   border-radius: 4px;
 }
 
@@ -1412,7 +1467,7 @@ body {
   background-color: #68a2ca;
 }
 
-.pagination-link:active {
+.pagination-link[href]:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #82b3d3;
 }
@@ -1434,18 +1489,22 @@ body {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
-  color: #000000;
   text-transform: uppercase;
+  color: #000000;
   text-align: center;
+  margin-bottom: 20px;
+  margin: 0;
 }
 
 .newsletter-text-catalog {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
-  color: #333333;
   text-align: center;
+  color: #000000;
+  margin-bottom: 54px;
 }
+
 /* модальное окно */
 .modal-container {
   position: fixed;
@@ -1457,6 +1516,7 @@ body {
   background-color: rgba(242, 242, 242, 0.8);
 }
 
+
 .modal {
   position: relative;
   margin: auto;
@@ -1464,10 +1524,15 @@ body {
   background-color: #ffffff;
   border-radius: 30px;
   box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
 }
 
 .modal-search {
   width: 717px;
+}
+
+.modal-container-close {
+  display: none;
 }
 
 .modal-close-button {
@@ -1500,7 +1565,7 @@ body {
 .modal-title {
   margin: 0;
   margin-bottom: 64px;
-  font-weight: 700px;
+  font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   color: #000000;
@@ -1508,54 +1573,71 @@ body {
 }
 
 .search-form {
-  margin: 0;
-  margin-bottom: 64px;
+  display: flex;
+  flex-direction: column;
 }
 
-.search-form-label {
+.modal-content label {
   font-family: inherit;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
+  margin: 0;
+  padding: 0;
+  align-self: center;
 }
 
-.search-form-input {
+.label-wrapper-data {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-bottom: 48px;
+}
+
+.search-check-in-label {
+  margin-right: 24px;
+}
+
+.check-out-label {
+  margin-right: 18px;
+}
+
+.search-input-date {
   font-family: inherit;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
   padding: 12px 20px;
+  width: 440px;
   border: none;
   background-color: #f2f2f2;
   border-radius: 4px;
   margin-left: 24px;
-}
-
-.input-date {
-  padding-right: 50px;
-  width: 440px;
+  box-sizing: border-box;
   background-image: url("../images/calendar.svg");
   background-repeat: no-repeat;
   background-position: center right 22px;
+  padding-right: 50px;
 }
 
-.search-form-input:hover {
+.search-input-date:hover {
   background-color: #e6e6e6;
 }
 
-.search-form-input:focus-visible {
+.search-input-date:focus-visible {
   background-color: #e6e6e6;
   outline: 3px solid #83b3d3;
 }
 
 .modal-filed-message {
+  position: absolute;
   font-size: 16px;
   font-weight: 400;
   line-height: 21px;
   color: #333333;
-  margin-bottom: 23px;
-  margin-left: 157px;
+  left: 157px;
+  top: 53px;
 }
 
 .modal-filed-message-error {
@@ -1565,26 +1647,35 @@ body {
 .modal-age-wrapper {
   display: flex;
   position: relative;
+  align-items: center;
   justify-content: space-between;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 48px
 }
 
 .guests-wrapper {
   display: flex;
   position: relative;
-  justify-content: space-between;
-  margin: 0;
-  padding: 0;
+}
+
+.search-input-guests {
+  display: flex;
+  width: 110px;
+  height: 48px;
+  text-align: center;
+  border: none;
+  background-color: #f2f2f2;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  font-family: inherit;
 }
 
 .input-number-wrapper {
   background-color: #f2f2f2;
   border-radius: 4px;
-  display: flex;
   align-items: center;
   margin-left: 46px;
+  display: flex;
 }
 
 .number-minus {
@@ -1595,8 +1686,9 @@ body {
   align-items: center;
   background-color: #f2f2f2;
   border-radius: 4px;
-  color :#756157;
+  color: #756157;
   opacity: 0.3;
+  cursor: pointer;
 }
 
 .number-plus {
@@ -1607,48 +1699,64 @@ body {
   align-items: center;
   background-color: #f2f2f2;
   border-radius: 4px;
-  color :#756157;
+  color: #756157;
+  opacity: 0.3;
+  cursor: pointer;
+}
+
+.number-minus:hover,
+.number-plus:hover {
+  color: #000000;
+  opacity: 1;
+}
+
+.number-minus:focus-visible,
+.number-plus:focus-visible {
+  color: #000000;
+  outline: 3px solid #82b3d3
+}
+
+.number-minus:active,
+.number-plus:active {
+  color: #000000;
   opacity: 0.3;
 }
 
-.search-form-input[type="number"] {
+.search-input-guests[type="number"] {
   width: 31px;
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
 }
 
-.search-form-input::-webkit-outer-spin-button,
-.search-form-input::-webkit-inner-spin-button {
+.search-input-guests::-webkit-outer-spin-button,
+.search-input-guests::-webkit-inner-spin-button {
   appearance: none;
   margin: 0;
 }
 
-
 .form-label-icon {
   display: flex;
-  position: relative;
-  padding-right: 25px;
+  align-items: center;
+  gap: 10px;
 }
 
 .tooltip {
-  position: absolute;
-  margin-top: 12px;
-  right: 0;
+  position: relative;
 }
 
 .tooltip-toggle {
-  display: block;
+  display: flex;
   width: 26px;
   height: 26px;
   border: none;
-  margin: 0;
-  padding: 0;
   background-color: #83b3d3;
   border-radius: 50%;
   background-image: url("../images/info.svg");
   background-repeat: no-repeat;
   background-position: center;
+  padding: 0;
+  margin: 0;
 }
 
 .tooltip-text {
@@ -1661,7 +1769,7 @@ body {
   position: absolute;
   display: block;
   width: 216px;
-  margin-top: 15px;
+  margin-top: 16px;
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
@@ -1688,13 +1796,12 @@ body {
   width: 19px;
   height: 9px;
   position: absolute;
-  top: -9px;
-  left: 0;
+  top: -10px;
+  left: 30px;
   right: 0;
   margin: 0 auto;
   background-image: url("../images/arrow-up.svg");
 }
-
 
 .search-form-button {
   font-weight: 700;
